@@ -3,6 +3,7 @@ cm4all-beng-proxy (0.7.15) unstable; urgency=low
   * processor: unreference the caller pool in abort()
   * tcache: clear BASE on mismatch
   * fcgi-client: generate the Content-Length request header
+  * fcgi-client: send the CONTENT_TYPE parameter
 
  --
 
